# cucu

./: .coverage  .coveragerc  .cursorrules  .env  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN.md  LICENSE  Makefile  README.md  cortex.yaml  coverage-chrome.xml  coverage-edge.xml  coverage-firefox.xml  coverage.json  coverage.xml  noxfile.py  pyproject.toml  pytest.ini  renovate.json  sonar-project.properties
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/instructions/: copilot-instructions.md
.github/workflows/: build.yml  create_a_new_release.yml  lint.yml  publish-production.yml  publish-test.yml  python-publish.yml  unit-test.yml
data/features/: echo.feature  environment.py  feature_skipping_scenarios_by_file_presence.feature  feature_with_background.feature  feature_with_background_using_substeps.feature  feature_with_failing_scenario.feature  feature_with_failing_scenario_with_table.feature  feature_with_failing_scenario_with_web.feature  feature_with_logging.feature  feature_with_long_names.feature  feature_with_mixed_results.feature  feature_with_multilines_and_tables.feature  feature_with_no_scenarios.feature  feature_with_passing_scenario.feature  feature_with_passing_scenario_with_web.feature  feature_with_platform_specific_scenarios.feature  feature_with_scenario_outline.feature  feature_with_scenario_using_nth_type.feature  feature_with_special_steps.feature  feature_with_tagging.feature  feature_with_xml_tags.feature  google_kitten_search.feature  multiple_scenarios_with_browser_steps.feature  pass_through_assertion_error.feature  pass_through_cucu_passthrough.feature  pass_through_tuple_runtime_converted.feature  pass_through_tuple_type.feature  pass_through_tuple_value.feature  pass_through_unwrap.feature  pass_through_value_error_converted.feature  pass_through_value_error_passthrough.feature  scenario_stop_retry_early.feature  scenario_that_fails_with_after_scenario_steps.feature  scenario_that_lists_tab_info.feature  scenario_that_passes_with_after_scenario_steps.feature  scenario_with_browser_tabs.feature  scenario_with_comments.feature  scenario_with_console_logs.feature  scenario_with_substeps.feature  scenario_with_substeps_and_logging.feature  (+3 more)
data/features/custom_step_test/: custom_step.feature
data/features/slow_features/: slow_feature1.feature  slow_feature2.feature  slow_feature3.feature  slow_feature4.feature  slow_feature5.feature
data/features/steps/: __init__.py  cucu_steps.py
data/unit/: ansi.log.html
data/whitespace_lint/: environment.py  extraneous_whitespace.feature
data/www/: broken_images.html  buttons.html  checkboxes.html  clipboard.html  comboboxes.html  console_logging.html  cookies.html  counter.html  drag_drop.html  draggables.html  dropdowns.html  duplicate_buttons.html  duplicate_inputs.html  dynamic_dropdown.html  file.txt  files.html  frames.html  fuzzy_case_rules.html  fuzzy_rules.html  images.html  inputs.html  links.html  nested_frames.html  nothing_to_see_here.html  page_that_loads_forever.html  radio_buttons.html  shadow_dom.html  tables.html  tables_not.html  tabs.html  text.html
data/www/a11y/: buttons.html
docker/domino-cucu-standalone-chrome/: .bash_env  Dockerfile  README.md  build-docker.sh  entry_point.sh  entrypoint.sh  requirements.txt
docs/: index.html
features/: cucurc.yml  environment.py
features/browser/: browser_management.feature  browser_tab_managemenet.feature  browser_window_managemenet.feature  browser_window_management.feature  buttons.feature  checkboxes.feature  clipboard.feature  comboboxes.feature  console_logs.feature  cookies.feature  draggables.feature  dropdowns.feature  duplicate_buttons.feature  duplicate_draggables.feature  duplicate_inputs.feature  file_downloads.feature  file_upload.feature  frames.feature  fuzzy_rules.feature  helpers.feature  images.feature  inputs.feature  inputs_limits.feature  links.feature  mht.feature  page_checks.feature  radio_buttons.feature  shadow_dom.feature  tables.feature  tabs.feature  text.feature
features/cli/: collect_tags.feature  config.feature  debug.feature  help.feature  init.feature  internals.feature  ipdb.feature  lint.feature  lsp.feature  report.feature  report_basics.feature  report_replay_view.feature  report_search_and_sorting.feature  report_with_custom_failure_handler.feature  report_with_custom_subheader.feature  report_with_custom_tags.feature  run.feature  run_outputs.feature  run_with_database.feature  run_with_exclusive_locks.feature  run_with_hooks.feature  run_with_junit.feature  run_with_logging.feature  run_with_report.feature  run_with_tags.feature  run_with_thread_dumper.feature  run_with_workers.feature  secrets.feature  steps.feature  tags.feature  vars.feature
features/flow_control/: before_retry_handlers.feature  pass_through_exceptions.feature  repeating_steps.feature  run_after_scenario_steps.feature  run_and_measure.feature  run_nested_steps.feature  run_other_features.feature  run_scenarios_conditionally.feature  run_step_handlers.feature  run_steps_conditionally.feature  run_steps_on_element_visibilty.feature  wait_for_steps.feature
features/lint/: built_in_rules.feature
features/os/: command_steps.feature  file_steps.feature  platform_steps.feature  screenshot.feature  variables.feature
features/steps/: __init__.py  cucu_steps.py
init_data/: .gitignore  README.md  cucurc.yml
init_data/features/: cucurc.yml
specs/: database_specs.md  section_steps_specs.md
src/cucu/: __init__.py  ansi_parser.py  behave_tweaks.py  cli.py  config.py  db.py  environment.py  helpers.py  hooks.py  logger.py  page_checks.py  utils.py
tests/: test_behave_tweaks.py  test_browser.py  test_config.py  test_core.py  test_db.py  test_environment.py  test_frames_nested.py  test_junit_formatter.py  test_language_server.py  test_linter.py  test_reporter_parser.py  test_shadow_browser.py  test_table_steps.py  test_teestream.py
(+234 files in other folders)
