[project]
name = "cucu"
version = "1.3.20"
description = "Easy BDD web testing"
readme = "README.md"
license = { text = "The Clear BSD License" }
keywords = ["cucumber", "selenium", "behave"]
authors = [
    {name = "Domino Data Lab", email = "open-source@dominodatalab.com"},
    {name = "Rodney Gomes", email = "107359+rlgomes@users.noreply.github.com"},
    {name = "Cedric Young", email = "4129217+ccedricyoung@users.noreply.github.com"},
    {name = "Xin Dong", email = "104880864+ddl-xin@users.noreply.github.com"},
    {name = "Kavya Yakkati", email = "91882851+ddl-kavya@users.noreply.github.com"},
    {name = "Kevin Garton", email = "71028750+ddl-kgarton@users.noreply.github.com"},
    {name = "Joy Liao", email = "107583686+ddl-joy-liao@users.noreply.github.com"},
]
maintainers = [
    {name = "Domino Data Lab", email = "open-source@dominodatalab.com"},
    {name = "Cedric Young", email = "4129217+ccedricyoung@users.noreply.github.com"},
    {name = "Kevin Garton", email = "71028750+ddl-kgarton@users.noreply.github.com"},
    {name = "Brian Colby", email = "92048365+ddl-bcolby@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing :: BDD",
]
include = [
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4~=4.14.2",
    "behave==1.3.3",
    "chromedriver-autoinstaller~=0.6.2",
    "click~=8.3.0",
    "coverage[toml]~=7.8",
    "geckodriver-autoinstaller~=0.1.0",
    "humanize~=4.14.0",
    "importlib-metadata~=8.7.0",
    "jellyfish>=1.1",
    "jinja2~=3.1.3",
    "lsprotocol~=2023.0.1",
    "mpire~=2.10.2",
    "peewee>=3.18.2",
    "psutil>=6.0",
    "pygls~=1.3.1",
    "pyyaml~=6.0.1",
    "requests>=2.31.0,<3.0.0",
    "selenium~=4.31",
    "tabulate~=0.9.0",
    "tenacity>=9.0",
]

[project.urls]
Homepage  = "https://github.com/dominodatalab/cucu/wiki"
Download  = "https://pypi.org/project/cucu/"
"Source Code" = "https://github.com/dominodatalab/cucu"

[project.scripts]
cucu = "cucu.cli:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/CHANGELOG.md",
]
exclude = [
  "/data",
  "/features",
  "/tests",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest~=8.4.0",
    "pytest-check>=2.5.3",
    "pytest-sugar>=1.0.0",
    "ruff>=0.6.4",
]

[tool.ruff]
lint.select = ["E", "F", "I", "Q0"]  # default options + isort
lint.ignore = ["E501", "F403"]  # line_length, import *
exclude = [".env", ".venv", "venv", "__init__.py"]
line-length = 79

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
detect-same-package = true

[tool.pytest]
junit_family = "xunit2"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
omit = ["results"]
parallel = true
relative_files = true
source = ["src"]

[tool.coverage.report]
fail_under = 70
show_missing = true
