[project]
name = "cucu"
version = "1.4.9"
description = "Easy BDD web testing"
readme = "README.md"
license = "BSD-3-Clause-Clear"
license-files = ["LICENSE"]
keywords = ["cucumber", "selenium", "behave"]
authors = [
    {name = "Domino Data Lab", email = "open-source@dominodatalab.com"},
    {name = "Rodney Gomes", email = "107359+rlgomes@users.noreply.github.com"},
    {name = "Cedric Young", email = "4129217+ccedricyoung@users.noreply.github.com"},
    {name = "Xin Dong", email = "104880864+ddl-xin@users.noreply.github.com"},
    {name = "Kavya Yakkati", email = "91882851+ddl-kavya@users.noreply.github.com"},
    {name = "Kevin Garton", email = "71028750+ddl-kgarton@users.noreply.github.com"},
    {name = "Joy Liao", email = "107583686+ddl-joy-liao@users.noreply.github.com"},
]
maintainers = [
    {name = "Domino Data Lab", email = "open-source@dominodatalab.com"},
    {name = "Cedric Young", email = "4129217+ccedricyoung@users.noreply.github.com"},
    {name = "Kevin Garton", email = "71028750+ddl-kgarton@users.noreply.github.com"},
    {name = "Brian Colby", email = "92048365+ddl-bcolby@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing :: BDD",
]
include = [
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4~=4.14.2",
    "behave==1.2.6",
    "chromedriver-autoinstaller~=0.6.2",
    "click~=8.3.0",
    "coverage[toml]~=7.8",
    "geckodriver-autoinstaller~=0.1.0",
    "humanize~=4.15.0",
    "importlib-metadata~=8.7.0",
    "jellyfish>=1.1",
    "jinja2~=3.1.3",
    "lsprotocol>=2025.0.0",
    "mpire~=2.10.2",
    "peewee>=3.18.2",
    "psutil>=6.0",
    "pygls>=2.0.0",
    "pyyaml~=6.0.1",
    "requests>=2.31.0,<3.0.0",
    "selenium>=4.38",
    "tabulate~=0.10.0",
    "tenacity>=9.0",
]

[project.urls]
Homepage  = "https://github.com/dominodatalab/cucu/wiki"
Download  = "https://pypi.org/project/cucu/"
"Source Code" = "https://github.com/dominodatalab/cucu"

[project.scripts]
cucu = "cucu.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["CHANGELOG.md"]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest~=9.0.0",
    "pytest-check>=2.5.3",
    "pytest-sugar>=1.0.0",
    "ruff>=0.6.4",
]

[tool.ruff]
lint.select = [
    "E", "F", "I", "Q0",  # defaults + isort
    "UP",    # pyupgrade
    "C4",    # flake8-comprehensions
    "RUF",   # ruff-specific
    "DTZ",   # flake8-datetimez
    "TID",   # flake8-tidy-imports
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "B",     # flake8-bugbear
    "PERF",  # perflint
    "FURB",  # refurb
    "S",     # flake8-bandit
]
lint.ignore = [
    "E501",  # line too long
    "F403",  # import *
]
lint.per-file-ignores."tests/**" = ["S101"]  # assert in pytest is expected
lint.per-file-ignores."src/cucu/edgedriver_autoinstaller/**" = ["S"]  # vendored driver installer
lint.per-file-ignores."src/cucu/steps/command_steps.py" = ["S103", "S602", "S603"]  # intentional shell execution
lint.per-file-ignores."src/cucu/steps/flow_control_steps.py" = ["S602"]  # intentional shell execution
lint.per-file-ignores."src/cucu/language_server/core.py" = ["S104"]  # intentional bind-all for dev tool
lint.per-file-ignores."src/cucu/config.py" = ["S108"]  # known temp dir path constant
exclude = [".env", ".venv", "venv", "__init__.py"]
line-length = 79

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
detect-same-package = true

[tool.pytest]
junit_family = "xunit2"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
omit = ["results"]
parallel = true
relative_files = true
source = ["src"]

[tool.coverage.report]
fail_under = 70
show_missing = true
